[package]
name = "gwt"
version = "0.1.1"
edition = "2021"
description = "Git Worktree CLI with better DX"
license = "MIT"
repository = "https://github.com/waydegilliam/gwt"
readme = "README.md"

[lib]
name = "gwt"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
