[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "gwt"
dynamic = ["version"]
description = "Git Worktree CLI with better DX"
readme = "README.md"
authors = [
    { name = "waydegilliam", email = "waydegilliam@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "maturin>=1.11,<2.0",
]
lint = [
    "pyright>=1.1.407",
    "ruff>=0.14.10",
]

[project.scripts]
gwt = "gwt:main"

[tool.maturin]
features = ["pyo3/extension-module"]

